--- a/ch_evaluation_results.tex
+++ b/ch_evaluation_results.tex
@@ -8,6 +8,9 @@
 \chapter{Combined Results}\label{cha:evaluation-results}
 
 
+
+\todo{move problem from this section to machine learning chapter. Use this to only present a combined overview of results.}
+
 \section{Prediction of Long-term Migrations} \label{long_term}
 
 In this section, we describe the work on the prediction of long-term mobility. Our main goal is to attain a model in which migrations can be accurately predicted from the CDR data. Added to this, we would like to know what information from the data has most predictive power to the target variable.
