--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -7,11 +7,15 @@
 
 \chapter{Introduction} \label{cha:intro}
 
+\todo{Extend intro of all concepts in paper: what are we doing, what is chagas, migrations, CDRs, parasites, epidemics, machine learning , and a comment on what will be done on further chapters.}
+
 Chagas disease is a tropical parasitic epidemic of global reach, spread mostly across 21 Latin American countries. The World Health Organization (WHO) estimates more than six million infected people worldwide ~\textcite{who2016}. Caused by the \textit{Trypanosoma cruzi} parasite, its transmission occurs mostly in the American endemic regions via the \textit{Triatoma infestans} insect family (also called ``kissing bug", and known by many local names such as ``vinchuca" in Argentina, Bolivia, Chile and Paraguay, and ``chinche" in Central America). In recent years and due to globalization and migrations, the disease has become an %health 
 issue in other continents ~\textcite{schmunis2010chagas}, 
 particularly in countries that receive Latin American immigrants such as Spain~\textcite{navarro2012chagas} and the United States~\textcite{hotez2013unfolding}, 
 making it a global health problem.
 
+
+\todo{move specific chagas info to its own chapter}
 A crucial characteristic of the infection is that it may last 10 to 30 years in an individual without being detected~ \textcite{rassi2012american}, which greatly complicates effective detection and treatment. About 30\% of individuals with chronic Chagas disease will develop life-threatening cardiomyopathies or gastrointestinal disorders, whereas 
 the remaining individuals will never develop symptoms.
 Long-term human mobility (particularly seasonal and permanent rural-urban migration) thus plays a key role in the spread of the epidemic~ \textcite{briceno2009chagas}. Relevant routes of transmission also include blood transfusion, congenital contagion --with an estimated 14,000 newborns infected each year in the Americas~ \textcite{OPS2006chagas}--,
