--- a/preamble.tex
+++ b/preamble.tex
@@ -154,7 +154,7 @@ height=21cm,top=3.7cm,headsep=1cm,footskip=1.1cm]{geometry}
 
 \usepackage{algorithm2e} % to write pseudo-code algorithms
 \usepackage{qtree} % To draw trees
-
+\usepackage{todonotes} % To draw trees
 
 %----------------------------------+
 % Appendix, bibliography and index |
